[package]
name = "cat-clone"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Your Name <your@email.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to display contents of files"
keywords = ["cli", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0"}
log = "0.4.19"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"